# synthrs-wasm-ts

./: .eslintignore  1.22968d6.js  1.712cf25.js  1.a822aee.js  1.b6e72e8.js  2.22968d6.js  2.5edc6b6.js  2.d6ba32c.js  README.md  app.22968d6.js  app.5512fac.js  app.5edc6b6.js  app.712cf25.js  app.7301c50.js  app.797b9d9.js  app.8d52303.js  app.98a8a1d.js  app.a822aee.js  app.b6e72e8.js  app.d29022e.js  app.d32018b.js  app.d6ba32c.js  index.html  package.json  tsconfig.json  vendor.d6ba32c.js  webpack.config.js
src/: index.html  index.tsx
src/components/App/: App.test.tsx  App.tsx  audio.ts  styles.scss
src/components/App/assets/: greensleeves.mid
src/components/App/sections/: JsFuncSection.tsx  MidiSection.tsx  MidiWebAudioSection.tsx  PianoSection.tsx  TonesSection.tsx
src/components/Piano/: Piano.tsx  styles.scss
src/wasm/: .gitignore  Cargo.toml  README.md
src/wasm/bindgen/: synthrs_wasm.d.ts  synthrs_wasm.js  synthrs_wasm_bg.wasm
src/wasm/src/: lib.rs
