[package]
name = "synthrs-wasm"
version = "0.1.0"
authors = ["Ng Guoyou <ng.guoyou@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.27"

[dependencies.synthrs]
git = "https://github.com/gyng/synthrs"
rev = "436f69685b0d254a2d0e892648de2d64edffa301"

[profile.release]
lto = true
