[package]
name = "synthrs-wasm"
version = "0.1.0"
authors = ["Ng Guoyou <ng.guoyou@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.4"
lazy_static = "1.2.0"
wasm-bindgen = "0.2.27"

[dependencies.synthrs]
git = "https://github.com/gyng/synthrs"
rev = "551d564d2ded99f78998af514ecae5c6b2c100c2"

[profile.release]
lto = true
