[package]
name = "synthrs-wasm"
version = "0.1.0"
authors = ["Ng Guoyou <ng.guoyou@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.4"
wasm-bindgen = "0.2.27"

[dependencies.synthrs]
git = "https://github.com/gyng/synthrs"
rev = "93c0720f7ae63a7db806b667fa3f0f14f6d25f1a"

[profile.release]
lto = true
